# aptos-indexer

./: Cargo.toml  README.md  build.rs  docker-compose.yml  rust-toolchain.toml  substreams-apots-stats-v0.1.0.spkg  up.sh
migrations/2022-08-05-024045_create_block_metadata/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs  substreams.rs  substreams_stream.rs
src/proto/: aptos.stats.v1.rs  codec.rs  sf.substreams.v1.rs
