[package]
name = "aptos-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
diesel = { version = "1.4.8", features = ["postgres", "numeric", "r2d2", "chrono"] }
chrono = "0.4.19"
futures03 = { version = "0.3.1", package = "futures", features = ["compat"] }
http = "0.2.3"
tokio = { version = "1.16.1", features = ["time", "sync", "macros", "test-util", "rt-multi-thread", "parking_lot"] }
tokio-stream = { version = "0.1.9", features = ["sync"] }
tokio-retry = "0.3.0"
tonic = { version = "0.7.1", features = ["tls-roots"] }
prost = "0.10.4"
prost-types = "0.10.1"
thiserror = "1.0.25"

[build-dependencies]
tonic-build = { version = "0.7.2", features = ["prost"] }